--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,5 +25,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.2.0'
+
+    //network dependency
+    compile 'com.squareup.retrofit2:retrofit:2.2.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+
+    //unit test
     testCompile 'junit:junit:4.12'
 }
