--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+  ~ Created by Aditya on 9/4/17 10:30 PM
+  ~ Copyright (c) 2017 All rights reserved.
+  ~
+  ~ Last modified 9/4/17 10:30 PM
+  -->
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.githubapi" >
+    package="com.githubapi">
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -8,8 +17,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
-        <activity android:name=".language.view.LanguageActivity"
+        android:theme="@style/AppTheme">
+        <activity
+            android:name=".repositoryLanguage.view.LanguageActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,6 +27,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".repositoryList.view.RepositoryList"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
