--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 /*
- * Created by Aditya on 9/4/17 9:21 PM
+ * Created by Aditya on 9/4/17 11:21 PM
  * Copyright (c) 2017 All rights reserved.
  *
- * Last modified 9/4/17 8:51 PM
+ * Last modified 9/4/17 11:10 PM
  */
 
 apply plugin: 'com.android.application'
@@ -38,6 +38,7 @@ dependencies {
 
     //unit test
     testCompile 'junit:junit:4.12'
+    testCompile 'org.mockito:mockito-core:2.7.22'
 
     //UI test
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
