--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,8 @@
 /*
- * Created by Aditya on 9/4/17 11:21 PM
+ * Created by Aditya on 10/4/17 10:49 PM
  * Copyright (c) 2017 All rights reserved.
  *
- * Last modified 9/4/17 11:10 PM
+ * Last modified 10/4/17 9:35 PM
  */
 
 apply plugin: 'com.android.application'
@@ -41,6 +41,7 @@ dependencies {
     testCompile 'org.mockito:mockito-core:2.7.22'
 
     //UI test
+    testCompile "org.robolectric:robolectric:3.3.2"
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
